# tij

./: Cargo.toml
src/: main.rs
src/tij/: app.rs  conf.rs  mod.rs  theme.toml
src/tij/view/: fetcher.rs  home.rs  mod.rs
