[package]
name = "tij"
version = "0.1.0"
authors = ["Fernando Jascovich <fernando.ej@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
confy = "0.3.1"
cursive = { version = "0.16", features = ["toml"] }
reqwest = { version = "0.11.3", features = ["blocking"] }
serde_json = "1.0"

